Bug #27728 Partially connected API's can cause problem for SUMA
Submitted: 10 Apr 2007 7:17 Modified: 17 Apr 2007 11:47
Reporter: Jonas Oreland Email Updates:
Status: Closed
Category:Server: ClusterRep Severity:S3 (Non-critical)
Version:5.1-wl2325-5.0, 5.1* OS:Any
Assigned to: Jonas Oreland Target Version:

[10 Apr 2007 7:17] Jonas Oreland
Description:
.

How to repeat:
.

Suggested fix:
.
[10 Apr 2007 7:42] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/24120

ChangeSet@1.2136, 2007-04-10 09:42:03+02:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#27728
    Make sure API is connected to nodes when subscribing
[10 Apr 2007 8:05] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/24121

ChangeSet@1.2452, 2007-04-10 10:05:01+02:00, jonas@perch.ndb.mysql.com +3 -0
  ndb - bug#27728 (5.1)
    Make sure API is connected to nodes when subscribing
[15 Apr 2007 16:49] Bugs System
Pushed into 5.1.18-beta
[17 Apr 2007 11:47] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version, including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.18 and telco-6.1.6 changelogs.