ndb - bug#27728 (5.1)   Make sure API is connected to nodes when subscribing